[package]
name = "events-methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true, features = ["unstable"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-2.0" }
risc0-zkp = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true }
