[package]
name = "events-guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "events"
path = "src/bin/events.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-2.0", features = ["unstable-event", "unstable-verifier"] }
risc0-zkvm = { version = "2.0", default-features = false, features = ["std", "unstable"] }
log = "0.4"


[patch.crates-io]
# enable RISC Zero's precompiles
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
